--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <a class="hexLogo" href="index.html">hex school</a>
         </h1>
         <nav>
-            <ul class="navLink">
+            <ul class="navbar">
                 <li>
-                    <a class="navLink-item" href="#">首頁</a>
+                    <a class="navbar-item" href="#">首頁</a>
                 </li>
                 <li>
-                    <a class="navLink-item" href="#">產品介紹</a>
+                    <a class="navbar-item" href="#">產品介紹</a>
                 </li>
                 <li>
-                    <a class="navLink-item" href="#">聯絡我們</a>
+                    <a class="navbar-item" href="#">聯絡我們</a>
                 </li>
             </ul>
         </nav>
@@ -45,7 +45,7 @@
 
     <!-- banner -->
     <section class="banner-bg">
-        <div class="banner">
+        <div class="banner wrap">
             <h2 class="banner-title">
                 六角學院<br>
                 讓您奠定良好的前端基礎
@@ -55,32 +55,39 @@
 
     <!-- main content -->
     <main>
-        <section class="cantainer">
+        <section class="course wrap">
             <ul class="cards">
-                <li>
+                <li class="card">
                     <img src="./images/html.png" alt="htmlLogo"></img>
                     <h3>
                         Html基礎教學
                     </h3>
-                    <p>內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文</p>
+                    <p>主流前端網站設計的基礎就在六角學院，在這裡不在是填鴨式教學，而是透過實際的範例，瞭解正確的網站開發流程， 講師均具有業界開發經驗，讓學員學習業界主流的開發方法。</p>
                 </li>
-                <li>
+                <li class="card">
                     <img src="./images/rwd.png" alt="rwdLogo"></img>
                     <h3>
                         響應式網站設計
                     </h3>
-                    <p>內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內</p>
+                    <p>響應式網站設計 (Responsive web design)，目前大多使用者均是以手機瀏覽的情況下，響應式網站已經是必備的。 六角學院將會提供業界響應式開發方法，讓學生瞭解行動版開發技巧。
+                    </p>
                 </li>
-                <li>
+                <li class="card">
                     <img src="./images/jQuery.png" alt="jQueryLogo"></img>
                     <h3>
                         JQuery實戰教學
                     </h3>
-                    <p>內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內</p>
+                    <p>本課程有以下特色</p>
+                    <ol>
+                        <li>瞭解變數的使用方法</li>
+                        <li>學習並操作DOM</li>
+                        <li>學習基本數學運算方法</li>
+                        <li>套件的操作及運用</li>
+                    </ol>
                 </li>
             </ul>
         </section>
-        <section class="product">
+        <section class="product wrap">
             <h3>
                 線上及實體課程差別
             </h3>
@@ -93,75 +100,74 @@
                 </tr>
                 <tr>
                     <td>費用</td>
-                    <td>較低</td>
-                    <td>較低</td>
+                    <td class="color-primary">較低</td>
+                    <td class="color-primary">較低</td>
                     <td>較高</td>
                 </tr>
                 <tr>
                     <td>學習效果</td>
                     <td>一般</td>
-                    <td>較低</td>
-                    <td>很好</td>
+                    <td class="color-primary">較低</td>
+                    <td class="color-primary">很好</td>
                 </tr>
                 <tr>
                     <td>Code review</td>
-                    <td>有</td>
+                    <td class="color-primary">有</td>
                     <td>無</td>
                     <td>不一定</td>
                 </tr>
                 <tr>
                     <td>課程更新速度</td>
-                    <td>普通</td>
-                    <td>普通</td>
+                    <td class="color-primary">普通</td>
+                    <td class="color-primary">普通</td>
                     <td>較慢</td>
                 </tr>
                 <tr>
                     <td>多次複習</td>
-                    <td>可</td>
+                    <td class="color-primary">可</td>
                     <td>可</td>
                     <td>不可</td>
                 </tr>
                 <tr>
                     <td>字幕</td>
-                    <td>有</td>
+                    <td class="color-primary">有</td>
                     <td>不一定</td>
                     <td>板書</td>
                 </tr>
             </table>
         </section>
-        <section class="contact-bg">
-            <div class="contact">
-                <h3>對我們課程有興趣嗎?<br>
-                    歡迎留下資料</h3>
-                <div class="txt">
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
+        <section class="form-bg">
+            <h3>對我們課程有興趣嗎?<br>
+                歡迎留下資料</h3>
+            <div class="form wrap">
+                <textarea name="#" id="#"></textarea>
+
+                <div class="guestInfo">
+                    <label for="name">姓名</label>
+                    <input type="text" name="name" id="name" placeholder="六角講師" required>
+
+                    <label for="tel">電話</label>
+                    <input type="tel" name="tel" id="tel" placeholder="111111111" required>
+
+                    <label for="mail">信箱</label>
+                    <input type="mail" name="mail" id="mail" placeholder="hexschool@Xmail.com" required>
+
+                    <button class="btn">送出</button>
                 </div>
-                <div>
-                    <label for="name">姓名
-                        <input type="text" name="name" id="name" placeholder="六角講師">
-                    </label>
-                    <label for="tel">電話
-                        <input type="tel" name="tel" id="tel" placeholder="111111111">
-                    </label>
-                    <label for="mail">信箱
-                        <input type="mail" name="mail" id="mail" placeholder="hexschool@Xmail.com">
-                    </label>
-                </div>
-                <button type="submit">送出</button>
+
             </div>
         </section>
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer class="footer wrap">
         <a href="#">
             <img src="./images/footerLogo.png" alt="footerLogo">
         </a>
         <nav>
-            <ul>
+            <ul class="contact">
                 <li>聯絡我們:
                     <a href="mailto:hexschool@Xmail.com">hexschool@Xmail.com</a>
-
                 </li>
                 <li>電話:
                     <a href="tel:111111111">111111111</a>
