--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="A description of the page">
     <!-- icon -->
     <link rel="shortcut icon" href="./images/logoS.png">
+    <title>HTML RWD</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
